# endstone_mediaplayer

./: .clangd  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_ZH.md
.github/workflows/: build.yml  release.yml
include/: abi_helpers.h  endstone_abi.h  music_player.h  version.h
src/: endstone_api.c  music_player.c  plugin.c  sfunc.c
tests/: test_nbs_parser.c
